# model-registry

./: LICENSE  Makefile  README.md  package-lock.json
backend/: .flake8  .gitignore  .pre-commit-config.yaml  gunicorn.conf.py  openapi.yaml  pyproject.toml
backend/app/: __init__.py  __main__.py  config.py  db.py  main.py  models.py  prompts.py  storage.py  utils.py
backend/app/api/: __init__.py  artifact.py  auth.py  files  lineage.py  ratings.py  routes_artifacts.p  routes_artifacts.py  routes_downloads.p  routes_downloads.py  routes_health.p  routes_health.py  routes_reset.py
backend/app/auth/: __init__.py  api_request_limiter.py  auth_services.py  jwt_handlers.py  routes.py
backend/app/constants/: http_status_codes.py
backend/app/dals/: artifact_audit.py  artifacts.py  files  ratings.py  users.py
backend/app/db/: base.py  core.py  models.py  session.py
backend/app/schemas/: artifact.py  files  lineage.py  model_rating.py
backend/app/services/: artifact.py  artifact_cost.py  auth.py  files  lineage.py  llm_client.py  ratings.py  storage.py
backend/app/services/artifacts/: client.py  code_fetcher.py  dataset_fetcher.py  license_check.py  model_fetcher.py  repo_view.py
backend/app/workers/ingestion_worker/: Dockerfile  README.md  handler.py  ingestion_logic.py  metadata.py
backend/core/: config.py
backend/tests/: conftest.py  ratings_common.py  test_app.py  test_artifacts_delete.py  test_dummy.py  test_health.p  test_health.py  test_ratings_utils.py  test_routes_artifacts.py  test_routes_artifacts_basic.p  test_routes_artifacts_basic.py  test_routes_artifacts_regex.py  test_routes_downloads.p  test_routes_downloads.py  test_storage.py  test_utils.py  utils.py
backend/tests/api/: test_artifact_api.py  test_artifact_audit_api.py  test_lineage_api.py  test_ratings_api.py
backend/tests/auth/: test_api_request_limiter.py  test_auth_routes.py  test_auth_services.py
backend/tests/dals/: test_artifacts_dal.py  test_ratings_dal.py
backend/tests/db/: conftest.py  test_core.py  test_session.py
backend/tests/services/: test_artifact.py  test_artifact_audit_service.py  test_artifact_cost.py  test_lineage_service.py  test_llm_client.py  test_ratings_service.py  test_storage.py
backend/tests/utils/: test_ratings_utils.py
backend/tests/workers/: test_code_quality.py  test_integrated_data_fetcher.py  test_main.py
backend/workers/rate_worker/: run
(+122 files in other folders)
