[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-registry"
version = "0.1.0"
description = "Trustworthy model registry backend and workers"
# If/when you have runtime deps, add them here:
dependencies = [
  "flask>=3.1.2",
  "flask-cors>=6.0.1",
  "flask-jwt-extended>=4.7.1",
  "bcrypt>=5.0.0",
  "sqlalchemy>=2.0",
  "requests>=2.32,<3",
  "huggingface_hub>=0.24",
  "gunicorn>=23.0.0",
  "types-flask-cors",
  "boto3>=1.15.0",
  "types-boto3",
  "SQLAlchemy>=2.0.44",
  "python-dotenv>=1.2.1",
  "psycopg2-binary>=2.9.11",
  "pydantic>=2.9.2",
  "requests>=2.32.5",
  "types-requests>=2.32",
  "gitpython>=3.1.45",
  "huggingface_hub>=1.1.5",
  "openai>=1.55.0",
  "redis==5.0.1",
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-docstrings",
  "isort",
  "mypy==1.18.2",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "hatch"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
strict = true
files = ["backend/app", "backend/tests"]
exclude = "venv"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast, isolated tests",
  "integration: hits external systems (db, services, network)",
  "e2e: full end-to-end flows"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
